# sim-gl-rend

./: CMakeLists.txt  README.md
glad/: CMakeLists.txt
glad/include/glad/: egl.h  gl.h  glad.h  gles1.h  gles2.h  glsc2.h  glx.h  vulkan.h  wgl.h
glad/src/: glad.c
src/: CMakeLists.txt
src/gl1/: CMakeLists.txt  camera.h  common.h  fp.h  main.cpp  matrix.h  pipeline.h  quaternion.h  shader.h  texture.h  vector.h
src/gl1/assets/gltf/: 1.json  minimum.gltf
src/gl1/assets/shaders/: common.h  shaderCommon.h  test.frag  test.vert
